# newnmo

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.override.yml  docker-compose.yml  entrypoint.sh  nginx.conf  supervisord.conf
db-init/: 10-restore.sh  20-missing-views.sh
nmocore/: Dockerfile  README.md  app.py  docker-compose.remote.yml  docker-compose.yml  import_mysql.py  install-ltree.sh  pyproject.toml  requirements.txt
nmocore/db/: Dockerfile  dbschema.sql
nmocore/docs/: api.md  architecture.md  database.md  deployment.md
nmocore/nmo/: cfg.py  com.py  dbmodel.py  dbmodel2.py
nmocore/tests/: test_endpoints.py
nmoui/: Dockerfile  README.md  nginx.conf  package-lock.json  package.json
nmoui/scripts/: build-assets.js  render-json.js  start.js
nmoui/src/assets/css/: custom.css
nmoui/src/js/: acknowledgement.js  base.js  bycells.js  bylabs.js  byregion.js  byspecies.js  cellschart.js  index.js  jquery.tree-multiselect.min.js  keywords.js  labschart.js  metadata.js  neuroninfo.js  neurons.js  regionchart.js  scripts.js  specieschart.js  statistics.js  whats-new.js  world.topo.js
nmoui/src/json/: acknowledgement.json  browsecells.json  browselabs.json  browseregions.json  browsespecies.json  cellslist.json  index.json  labslist.json  regionlist.json  specieslist.json  whats-new.json
nmoui/src/pug/layouts/: default.pug
nmoui/src/pug/pages/: about.pug  acknowledgements.pug  api.pug  bycelltypes.pug  bycelltypesmetadata.pug  bylab.pug  bylabmetadata.pug  index.pug  (+25 more)
nmoui/src/scss/: _global.scss  _project-global.scss
(+8 files in other folders)
